--- a/ideaForge/ideaForge.csproj
+++ b/ideaForge/ideaForge.csproj
@@ -267,6 +267,12 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="OutlinedText.cs" />
+    <Compile Include="Pages\DashboardPages\PendingRidePage.xaml.cs">
+      <DependentUpon>PendingRidePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\DashboardPages\CompletedRidePage.xaml.cs">
+      <DependentUpon>CompletedRidePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\DashboardPages\IFDockPage.xaml.cs">
       <DependentUpon>IFDockPage.xaml</DependentUpon>
     </Compile>
@@ -285,6 +291,8 @@
     <Compile Include="Popups\DockAreaPropup.xaml.cs">
       <DependentUpon>DockAreaPropup.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\PendingRideViewModel.cs" />
+    <Compile Include="ViewModels\CompleteRideViewModel.cs" />
     <Compile Include="ViewModels\DashboardViewModel.cs" />
     <Compile Include="ViewModels\IFDockViewModel.cs" />
     <Compile Include="ViewModels\LoginPageViewModel.cs" />
@@ -299,6 +307,14 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="HamburgerViews\HamburgerMenuSample.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\DashboardPages\PendingRidePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\DashboardPages\CompletedRidePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
