--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Language.cs" />
+    <Compile Include="PilotAllRequest.cs" />
     <Compile Include="PilotOTP.cs" />
+    <Compile Include="PilotRequest.cs" />
     <Compile Include="ProfileModel.cs" />
     <Compile Include="UserDatumCity.cs" />
     <Compile Include="Login.cs" />
