GUI Changes Done also Progress Ring Added

--- a/ideaForge/ideaForge.csproj
+++ b/ideaForge/ideaForge.csproj
@@ -521,5 +521,9 @@
   <ItemGroup>
     <Resource Include="Images\request.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\ongoingIcon.png" />
+    <Resource Include="Images\pendingIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
