--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -47,6 +47,7 @@
     <Compile Include="PilotOTP.cs" />
     <Compile Include="PilotRequest.cs" />
     <Compile Include="ProfileModel.cs" />
+    <Compile Include="Ride.cs" />
     <Compile Include="UserDatumCity.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
