Pilot Location Model and Interface Created ... no data

--- a/IdeaForge.Service/IdeaForge.Service.csproj
+++ b/IdeaForge.Service/IdeaForge.Service.csproj
@@ -48,6 +48,7 @@
     <Compile Include="GenericServices\ProfileService.cs" />
     <Compile Include="GenericServices\RegisterService.cs" />
     <Compile Include="GenericServices\LoginService.cs" />
+    <Compile Include="IGenericServices\IPilotLocation.cs" />
     <Compile Include="IGenericServices\IPilotRequestServices.cs" />
     <Compile Include="IGenericServices\IProfileSerevice.cs" />
     <Compile Include="IGenericServices\IRegisterService.cs" />
