--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Language.cs" />
     <Compile Include="PilotAllRequest.cs" />
+    <Compile Include="PilotLocation.cs" />
     <Compile Include="PilotOTP.cs" />
     <Compile Include="PilotRequest.cs" />
     <Compile Include="ProfileModel.cs" />
