--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -47,10 +47,9 @@
     <Compile Include="PilotLocation.cs" />
     <Compile Include="PilotOTP.cs" />
     <Compile Include="PilotRequest.cs" />
+    <Compile Include="PilotRideUpdate.cs" />
     <Compile Include="ProfileModel.cs" />
     <Compile Include="Ride.cs" />
-    <Compile Include="RideStatus.cs" />
-    <Compile Include="RideUpdate.cs" />
     <Compile Include="StatusChanges.cs" />
     <Compile Include="UserDatumCity.cs" />
     <Compile Include="Login.cs" />
