UpdateByPilot Api servives created

--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -49,6 +49,7 @@
     <Compile Include="PilotRequest.cs" />
     <Compile Include="ProfileModel.cs" />
     <Compile Include="Ride.cs" />
+    <Compile Include="RideByPilot.cs" />
     <Compile Include="RideStatus.cs" />
     <Compile Include="StatusChanges.cs" />
     <Compile Include="UserDatumCity.cs" />
