--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Language.cs" />
     <Compile Include="PilotAllRequest.cs" />
     <Compile Include="FlightFeedback.cs" />
-    <Compile Include="PilotLocation.cs" />
+    <Compile Include="PilotLocations.cs" />
     <Compile Include="PilotOTP.cs" />
     <Compile Include="PilotRequest.cs" />
     <Compile Include="FlightStatus.cs" />
