--- a/ideaForge/packages.config
+++ b/ideaForge/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net48" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
   <package id="DotNetKit.Wpf.AutoCompleteComboBox" version="1.4.0" targetFramework="net48" />
+  <package id="IKVM" version="8.2.0" targetFramework="net48" />
   <package id="JetBrains.Annotations" version="2022.1.0" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net48" />
@@ -14,6 +15,10 @@
   <package id="MonkeyCache.FileStore" version="1.6.3" targetFramework="net48" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.3" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="XAML.MapControl" version="7.2.0" targetFramework="net48" />
