--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -32,7 +32,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +52,7 @@
     <Compile Include="PilotRequest.cs" />
     <Compile Include="FlightStatus.cs" />
     <Compile Include="ProfileModel.cs" />
+    <Compile Include="PropertyValidateModel.cs" />
     <Compile Include="Ride.cs" />
     <Compile Include="RideByPilot.cs" />
     <Compile Include="RideStatus.cs" />
