more changes for app crash fixes

--- a/IdeaForge.Service/IdeaForge.Service.csproj
+++ b/IdeaForge.Service/IdeaForge.Service.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericServices\GoogleMapsApiService.cs" />
+    <Compile Include="IGenericServices\IGoogleMapsApiService.cs" />
     <Compile Include="GenericServices\PilotRequest.cs" />
     <Compile Include="GenericServices\ProfileService.cs" />
     <Compile Include="GenericServices\RegisterService.cs" />
