--- a/ideaForge/packages.config
+++ b/ideaForge/packages.config
@@ -5,6 +5,7 @@
   <package id="DotNetKit.Wpf.AutoCompleteComboBox" version="1.4.0" targetFramework="net48" />
   <package id="IKVM" version="8.2.0" targetFramework="net48" />
   <package id="JetBrains.Annotations" version="2022.1.0" targetFramework="net48" />
+  <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
@@ -21,5 +22,5 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
-  <package id="XAML.MapControl" version="7.2.0" targetFramework="net48" />
+  <package id="XAML.MapControl" version="7.2.1" targetFramework="net48" />
 </packages>
