--- a/IdeaForge.Core/IdeaForge.Core.csproj
+++ b/IdeaForge.Core/IdeaForge.Core.csproj
@@ -46,5 +46,11 @@
     <Compile Include="Utilities\Global.cs" />
     <Compile Include="Utilities\UrlHelper.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IdeaForge.Domain\IdeaForge.Domain.csproj">
+      <Project>{A29C7A05-83F5-4B66-AD24-C882A6768477}</Project>
+      <Name>IdeaForge.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
