--- a/IdeaForge.Core/IdeaForge.Core.csproj
+++ b/IdeaForge.Core/IdeaForge.Core.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListToDataTableConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Global.cs" />
     <Compile Include="Utilities\UrlHelper.cs" />
