--- a/ideaForge/ideaForge.csproj
+++ b/ideaForge/ideaForge.csproj
@@ -26,8 +26,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>93</ApplicationRevision>
-    <ApplicationVersion>1.0.0.93</ApplicationVersion>
+    <ApplicationRevision>95</ApplicationRevision>
+    <ApplicationVersion>1.0.0.95</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -67,14 +67,23 @@
     <ApplicationIcon>whiteIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClosedXML, Version=0.96.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.96.0\lib\net46\ClosedXML.dll</HintPath>
+    </Reference>
     <Reference Include="CommonServiceLocator, Version=2.0.2.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.2.0.2\lib\net47\CommonServiceLocator.dll</HintPath>
     </Reference>
     <Reference Include="ControlzEx, Version=4.0.0.0, Culture=neutral, PublicKeyToken=69f1c32f803d307e, processorArchitecture=MSIL">
       <HintPath>..\packages\ControlzEx.4.4.0\lib\net462\ControlzEx.dll</HintPath>
     </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.16.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.16.0\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
     <Reference Include="DotNetKit.Wpf.AutoCompleteComboBox, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetKit.Wpf.AutoCompleteComboBox.1.4.0\lib\net45\DotNetKit.Wpf.AutoCompleteComboBox.dll</HintPath>
+    </Reference>
+    <Reference Include="ExcelNumberFormat, Version=1.1.0.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelNumberFormat.1.1.0\lib\net20\ExcelNumberFormat.dll</HintPath>
     </Reference>
     <Reference Include="GalaSoft.MvvmLight, Version=5.4.1.0, Culture=neutral, PublicKeyToken=e7570ab207bcb616, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\GalaSoft.MvvmLight.dll</HintPath>
@@ -300,7 +309,12 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="Map\HeadingToVisiblityConverter.cs" />
+    <Compile Include="Models\ReportDetailsToExcel.cs" />
+    <Compile Include="Models\ReportsToExcel.cs" />
     <Compile Include="OutlinedText.cs" />
+    <Compile Include="Pages\AdminDashboardPages\AdminIFDockPage.xaml.cs">
+      <DependentUpon>AdminIFDockPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\DashboardPages\ReportCompletedPage.xaml.cs">
       <DependentUpon>ReportCompletedPage.xaml</DependentUpon>
     </Compile>
@@ -362,6 +376,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="HamburgerViews\HamburgerMenuSample.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\AdminDashboardPages\AdminIFDockPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -473,6 +491,8 @@
     <None Include="ideaForge_TemporaryKey.pfx" />
     <Resource Include="Images\upcomingIcon.png" />
     <Resource Include="Images\iconCanceled.png" />
+    <Resource Include="Images\iconExcel.png" />
+    <Resource Include="Images\SuccessfulAdminIcon.png" />
     <Content Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
