--- a/ideaForge/packages.config
+++ b/ideaForge/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.96.0" targetFramework="net48" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net48" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
   <package id="DotNetKit.Wpf.AutoCompleteComboBox" version="1.4.0" targetFramework="net48" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
   <package id="IKVM" version="8.2.0" targetFramework="net48" />
   <package id="JetBrains.Annotations" version="2022.1.0" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
