UserManagement Module work

--- a/IdeaForge.Service/IdeaForge.Service.csproj
+++ b/IdeaForge.Service/IdeaForge.Service.csproj
@@ -45,12 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GenericServices\GoogleMapsApiService.cs" />
+    <Compile Include="GenericServices\AdminRequest.cs" />
     <Compile Include="IGenericServices\IGoogleMapsApiService.cs" />
     <Compile Include="GenericServices\PilotRequest.cs" />
     <Compile Include="GenericServices\ProfileService.cs" />
     <Compile Include="GenericServices\RegisterService.cs" />
     <Compile Include="GenericServices\LoginService.cs" />
     <Compile Include="IGenericServices\IPilotLocation.cs" />
+    <Compile Include="IGenericServices\IAdminRequestServices.cs" />
     <Compile Include="IGenericServices\IPilotRequestServices.cs" />
     <Compile Include="IGenericServices\IProfileSerevice.cs" />
     <Compile Include="IGenericServices\IRegisterService.cs" />
