--- a/IdeaForge.Domain/IdeaForge.Domain.csproj
+++ b/IdeaForge.Domain/IdeaForge.Domain.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
+    <Compile Include="UserFeedback.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
